<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip_group">
            <com.google.android.material.chip.Chip
                style="@style/ChipStyleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_today" />
            <com.google.android.material.chip.Chip
                style="@style/ChipStyleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marvel" />
            <com.google.android.material.chip.Chip
                style="@style/ChipStyleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fans" />
            <com.google.android.material.chip.Chip
                style="@style/ChipStyleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starwars" />
            <com.google.android.material.chip.Chip
                style="@style/ChipStyleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dc" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>